[EDELIVERY-15571] Implement Enumeration of error message codes